@@ -32,9 +32,11 @@
     </repository>
   </repositories>
   <properties>
-    <tycho-version>0.12.0</tycho-version>
+    <tycho-version>0.14.1</tycho-version>
+    <target.platform>m2e-settings-e372</target.platform>
   </properties>
   <modules>
+    <module>org.eclipse.m2e.settings.target-platform</module>
     <module>org.eclipse.m2e.settings.core</module>
     <module>org.eclipse.m2e.settings.feature</module>
     <module>org.eclipse.m2e.settings.site</module>
@@ -120,11 +122,19 @@
         <extensions>true</extensions>
       </plugin>
       <plugin>
-        <groupId>org.sonatype.tycho</groupId>
+        <groupId>org.eclipse.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho-version}</version>
-        <configuration>
+         <configuration>
           <resolver>p2</resolver>
+            <target>
+            <artifact>
+                <groupId>org.eclipse.m2e.settings</groupId>
+                <artifactId>org.eclipse.m2e.settings.target-platform</artifactId>
+                <version>${project.version}</version>
+                <classifier>${target.platform}</classifier>
+            </artifact>
+          </target>
           <ignoreTychoRepositories>true</ignoreTychoRepositories>
         </configuration>
       </plugin>
@@ -132,8 +142,16 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.sonatype.tycho</groupId>
-          <artifactId>maven-osgi-test-plugin</artifactId>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-packaging-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <configuration>
+            <format>yyyyMMdd-HHmm</format>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-surefire-plugin</artifactId>
           <version>${tycho-version}</version>
           <configuration>
             <useUIHarness>true</useUIHarness>
@@ -141,23 +159,40 @@
               <include>**/*Test.java</include>
             </includes>
             <argLine>${tycho.test.jvmArgs}</argLine>
-            <forkedProcessTimeoutInSeconds>900</forkedProcessTimeoutInSeconds>
+            <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.4.3</version>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-p2-plugin</artifactId>
+          <version>${tycho-version}</version>
+        </plugin>
+        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.eclipse.tycho</groupId>
+                    <artifactId>tycho-packaging-plugin</artifactId>
+                    <versionRange>[0.14.1,)</versionRange>
+                    <goals>
+                      <goal>validate-id</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
   </build>
-  <!-- <profiles> <profile> <id>sun-jvm</id> <activation> <property> <name>java.vendor.url</name> <value>http://java.sun.com/</value> 
-    </property> </activation> <properties> <tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs> </properties> 
-    </profile> <profile> <id>osx</id> <activation> <property> <name>java.vendor.url</name> <value>http://www.apple.com/</value> 
-    </property> </activation> <properties> <tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.jvmArgs> 
-    <osgi.ws>cocoa</osgi.ws> </properties> </profile> <profile> <id>sign</id> <activation> <property> <name>jarsigner.alias</name> 
-    </property> </activation> <build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jarsigner-plugin</artifactId> 
-    <version>1.2</version> <executions> <execution> <id>sign</id> <goals> <goal>sign</goal> </goals> </execution> </executions> 
-    </plugin> </plugins> </build> </profile> </profiles> -->
 </project>
